# ViewTrendsSL

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  generate_tree.bat  install_dependencies.bat  processing and model training.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt
Docs/: Development Guide.md  Feasibility Report.md  Future(Version) Plans.md  Implemented.md  Log Book.md  Project Plan.md  Project Problems & Solutions.md  Project Schedule.md  README.md  Software Architecture Document.md  Software Requirements Specification.md  TODO.md  WIP.md
Initial Documents/: Initial Project Plan.md  Initial Project Plan.txt  Project Problems & Solutions.md  Project Proposal Reference.txt  Schedule Preparation Guideline.txt  Schedule Reference.txt  Software Requirements Specification Reference.txt  Source 1.txt  Source 2.txt
Initial Documents/References/: Feasibility Report Reference.md  MVP Specification.md  Problem Statement Reference.md  Project Proposal Reference.md  Schedule Reference.md  Software Architecture Document Reference.md  Software Requirements Specification Reference.md
Initial Documents/Templates/: Feasibility Report Template.md  Software Architecture Document Template.md  Software Requirement Specification Template.md
config/: README.md  __init__.py
config/api/: api_config.py  authentication_config.py  cors_config.py  rate_limiting_config.py
config/database/: database_config.py  migration_config.py  postgresql_config.py  sqlite_config.py
config/deployment/: ci_cd_config.yml  deployment_config.py  heroku_config.py
config/docker/development/: .env.dev.example  Dockerfile.dev  docker-compose.dev.yml
config/docker/production/: Dockerfile.prod  docker-compose.prod.yml  gunicorn.conf.py  nginx.conf
config/docker/testing/: Dockerfile.test
data/: README.md  virality_factor.py
data/upload/: final_feature_enrichment.py  update.py
docs/: Mid-Evaluation_Comprehensive_Report.md  repair_order.md
eda_da/: EDA_DA.py  ViewTrendsSL_EDA_Report.md  improved_eda_script.py  info.txt  log_analysis_summary.md
eda_da/eda_outputs/: eda_summary_report.md
models/: at_upload_longform_views_at_24h_model.joblib  at_upload_longform_views_at_30d_model.joblib  at_upload_longform_views_at_7d_model.joblib  at_upload_shorts_views_at_24h_model.joblib  at_upload_shorts_views_at_30d_model.joblib  at_upload_shorts_views_at_7d_model.joblib  longform_ratio_30d_to_7d_model.joblib  longform_ratio_7d_to_1d_model.joblib  longform_views_at_24h_model.joblib  longform_views_at_30d_model.joblib  longform_views_at_7d_model.joblib  shorts_ratio_30d_to_7d_model.joblib  shorts_ratio_7d_to_1d_model.joblib  shorts_views_at_24h_model.joblib  shorts_views_at_30d_model.joblib  shorts_views_at_7d_model.joblib
notebooks/: README.md
results/: training_report_20250908_011803.txt  training_report_20250915_232220.txt  training_report_20250916_001910.txt  training_report_20250916_005051.txt  training_report_20250916_011023.txt  training_report_20250916_012453.txt  training_report_20250916_012833.txt  training_report_20250916_014615.txt  training_report_20250916_024115.txt  training_report_20250916_030251.txt
scripts/: README.md  README_ENHANCED.md  project_tree.py
scripts/data_collection/: orchestrator.py
scripts/data_collection/validation/: data_validator.py
scripts/data_collection/youtube/: api_quota_manager.py  collect_channels.py  collect_videos.py  track_performance.py
scripts/data_processing/: process_csv_data.py
scripts/database/: README.md
scripts/database/backup/: backup_database.py
scripts/database/maintenance/: cleanup.py
scripts/database/setup/: init_database.py
scripts/deployment/docker/: entrypoint.sh
scripts/evaluation/: evaluate_models_NEEDS_COMPATIBILITY_FIX.py  proper_model_evaluation.py
scripts/model_training/: README.md  train_models.py
scripts/model_training/preprocessing/: prepare_data.py
scripts/model_training/training/: train_enhanced_models.py  train_models.py
scripts/training/: train_models.py  train_models_.py
src/: README.md
src/application/api/: app.py
src/application/api/analytics/: __init__.py  routes.py
src/application/api/auth/: __init__.py  routes.py
src/application/api/prediction/: __init__.py  routes.py
src/application/middleware/: auth_middleware.py  cors_middleware.py  rate_limit_middleware.py
src/business/ml/evaluation/: evaluator.py
src/business/ml/models/: base_model.py  longform_model.py  shorts_model.py
src/business/ml/training/: data_loader.py  (+1 more)
src/business/utils/: data_validator.py  feature_extractor.py  time_utils.py
src/data_access/database/: base.py  connection.py  session.py
src/data_access/models/: __init__.py  base.py  channel.py  snapshot.py  tag.py  user.py  video.py
src/data_access/repositories/: __init__.py  base_repository.py
src/presentation/: app.py
src/presentation/components/: chart_component.py
src/presentation/pages/: analytics.py  auth.py  home.py  prediction.py
tests/: README.md  __init__.py  pytest.ini  requirements-test.txt
tests/fixtures/: conftest.py  mock_data.py  test_database.py
tests/integration/: test_api_endpoints.py
tests/unit/test_ml/: __init__.py  test_feature_extractor.py
tests/unit/test_services/: test_prediction_service.py
(+9 files in other folders)
