[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viewtrendssl"
version = "1.0.0"
description = "YouTube Viewership Forecasting for Sri Lankan Audience"
authors = [
    {name = "Senevirathne S.M.P.U.", email = "pasindusenevirathne.22@cse.mrt.ac.lk"},
    {name = "Sanjula N.G.K.", email = "kevin.22@cse.mrt.ac.lk"},
    {name = "Shaamma M.S.", email = "sajahan.22@cse.mrt.ac.lk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
# Basic Configuration
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Output & Reporting
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--showlocals",
    "--durations=10",
    "--color=yes",
    "--code-highlight=yes",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage_html",
    "--cov-report=xml:tests/coverage.xml",
    "--cov-fail-under=80",
    "--cov-branch",
    # Uncomment to enable parallel execution: "-n", "auto"
]

# Test Markers
markers = [
    "unit: Unit tests - test individual components in isolation",
    "integration: Integration tests - test component interactions",
    "slow: Slow running tests (> 5 seconds)",
    "fast: Fast running tests (< 1 second)",
    "api: API endpoint tests",
    "database: Database related tests",
    "ml: Machine learning tests",
    "auth: Authentication tests",
    "prediction: Prediction service tests",
    "analytics: Analytics service tests",
    "data_collection: Data collection tests",
    "feature_engineering: Feature engineering tests",
    "performance: Performance tests",
    "security: Security tests",
    "smoke: Smoke tests - basic functionality verification",
    "regression: Regression tests - prevent known bugs",
    "acceptance: User acceptance tests",
    "e2e: End-to-end tests",
    "external: Tests requiring external services",
    "mock: Tests using mocked dependencies",
]

# Warnings & Deprecations
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
    "ignore:.*distutils.*:DeprecationWarning",
    "ignore:.*imp module.*:DeprecationWarning",
]

# Logging Configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "tests/logs/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(filename)s:%(lineno)d %(funcName)s(): %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# Timeout Configuration
timeout = 300
timeout_method = "thread"

# Test Collection
collect_ignore = [
    "setup.py",
    "conftest.py",
    "migrations/",
    "venv/",
    ".venv/",
    "env/",
    ".env/",
    "node_modules/",
    ".git/",
    "__pycache__/",
    ".pytest_cache/",
    "build/",
    "dist/",
    ".tox/",
    "docs/",
    "scripts/",
    "data/",
    "models/",
    "logs/",
]

# Benchmark Configuration
benchmark_min_rounds = 5
benchmark_max_time = 1.0
benchmark_min_time = 5e-06  # 0.000005
benchmark_timer = "time.perf_counter"
benchmark_disable_gc = false
benchmark_warmup = false

# Environment Variables for Testing
env = [
    "TESTING=true",
    "FLASK_ENV=testing",
    "DATABASE_URL=sqlite:///test_viewtrendssl.db",
    "YOUTUBE_API_KEY_1=test_key_1",
    "YOUTUBE_API_KEY_2=test_key_2",
    "YOUTUBE_API_KEY_3=test_key_3",
    "JWT_SECRET_KEY=test_jwt_secret",
    "SECRET_KEY=test_secret_key",
    "REDIS_URL=redis://localhost:6379/15",
    "LOG_LEVEL=DEBUG",
    "CACHE_TYPE=simple",
    "RATE_LIMIT_STORAGE_URL=memory://",
]